--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
     </li>
   
 </ul>
-<app-heroes-detail [hero]="selectedHero"></app-heroes-detail>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
