--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,11 +1,9 @@
-<div *ngIF='hero'>
+<div *ngIf= "hero">
     <h2>{{hero.name | uppercase}} </h2>
     <div><span>id:</span>{{hero.id}}</div>
     <div>
     <label>name:
      <input [(ngModel)]='hero.name' placeholder="hero.name"/>
-    
-
-</label>
+ </label>
     </div>
 </div>
